# ticker-converter

./: .checkmakerc  .copilot-instructions.md  .coverage.Mac.cust.communityfibre.co.uk.11051.XeCfdElx  .coverage.Mac.cust.communityfibre.co.uk.11084.XthFzYWx  .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  .sql-quality.yaml  .sqlfluff  .sqlfluffignore  CHANGELOG.md  FINAL_OPTIMIZATION_REPORT.md  ISSUE_1_COMPLETE.md  LICENSE  MODERNIZATION_COMPLETE.md  Makefile  Makefile.backup  PR_TEMPLATE.md  README.md  TEMP-REFACTORING-PROJECT.md  TEMP_AIRFLOW_ARCHITECTURE.md  TEMP_DATABASE_ARCHITECTURE.md  advanced_optimize.py  analyze_commands.py  bandit-report.json  cleanup_data.py  copilot-instructions.md  coverage.xml  current_analysis.txt  debug_crypto_api.py  demo_capabilities.py  demo_usd_gbp_endpoint.py  diagnose_conflicts.py  examine_data.py  examine_stored_data.py  fix_conflicts.py  fix_test_annotations.py  github_issue_comprehensive_project_modernization.md  manual_test.txt  (+11 more)
.github/: README.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  testing.md
.github/workflows/: ci.yml
airflow/: airflow.db  simple_auth_manager_passwords.json.generated
api/: README.md  database.py  dependencies.py  main.py  models.py
dags/: README.md  __init__.py  daily_etl_dag.py  manual_backfill_dag.py  test_etl_dag.py
dags/helpers/: __init__.py  assess_records.py  assess_records_minimal.py  collect_api_data.py  connection_validator.py  load_raw_to_db.py
dags/py/: assess_records.py  collect_api_data.py  load_json_to_db.py
dags/sql/: README.md
dags/sql/backfill/: deduplicate_historical_data.sql  generate_backfill_report.sql  load_historical_exchange_data.sql  load_historical_stock_data.sql  validate_backfill_period.sql  validate_historical_data.sql
dags/sql/ddl/: 001_create_dimensions.sql  002_create_facts.sql  003_create_views.sql  004_create_indexes.sql
dags/sql/etl/: clean_transform_data.sql  cleanup_old_data.sql  daily_transforms.sql  data_quality_checks.sql  load_currency_dimension.sql  load_date_dimension.sql  load_dimensions.sql  load_raw_exchange_data_to_postgres.sql  load_raw_stock_data_to_postgres.sql  load_stock_dimension.sql
dags/sql/queries/: currency_conversion.sql  magnificent_seven_performance_details.sql  magnificent_seven_top_performers.sql  price_ranges.sql  stock_summary.sql  top_performers.sql
data/: ticker_converter.db
docs/: .copilot-instructions.md  API_ENDPOINTS.md  DEPLOYMENT.md  FINAL_PROJECT_STRUCTURE.md  GIT_WORKFLOW.md  ISSUE_1_COMPLETE.md  PR_TEMPLATE.md  QUICK_REFERENCE.md  README.md  SAFE_TESTING_SUMMARY.md  SIMPLIFICATION_STRATEGY.md  SQL_SCHEMA.md  airflow_configuration.md  airflow_dag_documentation.md  architecture.md  data_pipeline.md  fastapi_sql_setup.md  migration_guide.md  python-refactoring.md  refactoring_summary.md  sql_examples.md
docs/architecture/: airflow_setup.md  api_design.md  database_design.md  database_schema_and_operations.md  etl_pipeline_implementation.md  overview.md  technology_choices.md  testing_strategy.md
docs/deployment/: local_setup.md  production.md
docs/development/: cross-platform-guide.md  cross_platform_setup.md  github_copilot_workflow_implementation.md  github_copilot_workflow_template.md  migration-guide.md  quality_gate_automation.md
docs/user_guides/: cli_usage.md  integration_testing.md  makefile_reference.md
make/: Makefile.airflow  Makefile.cleanup  Makefile.common  Makefile.database  Makefile.env  Makefile.install  Makefile.platform  Makefile.quality  Makefile.testing  help.sh
my_docs/: TEMP-REFACTORING-PROJECT.md
scripts/: README.md  airflow-cli.sh  airflow.py  airflow_refactored.py  cleanup_data.py  copilot_workflow.sh  create_airflow_admin.py  create_airflow_user.py  demo_capabilities.py  demo_config.py  demo_pipeline.py  examine_stored_data.py  fix_airflow_config.py  inspect_system.py  install_quality_tools.sh  quality_gate.py  run_dag_tests.sh  setup.py  setup_airflow.sh  test_api.py  test_json_loading.py  test_workflow.py
sql/ddl/: 001_create_dimensions.sql  004_create_indexes.sql
sql/etl/: cleanup_old_data.sql  daily_transform.sql  data_quality_checks.sql
sql/queries/: price_ranges.sql  stock_data_with_currency.sql  stock_summary.sql  top_performers.sql
src/: .copilot-instructions.md  README.md
src/ticker_converter/: __init__.py  api_client.py  cli.py  cli_ingestion.py  config.py  constants.py  core.py  exceptions.py  pipeline_config.py  run_api.py
src/ticker_converter/api/: README.md  __init__.py  dependencies.py  main.py  models.py
src/ticker_converter/api_clients/: REFACTORING_SUMMARY.md  __init__.py  api_client.py  api_client_legacy.py  client.py  client.py.backup  constants.py  data_processors.py  exceptions.py  utils.py
src/ticker_converter/data_ingestion/: __init__.py  airflow_manager.py  base_fetcher.py  currency_fetcher.py  (+7 more)
tests/: .copilot-instructions.md  README.md  TESTING_SAFETY.md  conftest.py  test_api_endpoints.py  test_cli.py  test_coverage_boost.py  test_coverage_boost_fixed.py  test_database_manager_utils.py  test_forex_crypto.py  test_market_data_validation.py  test_minimal_coverage_boost.py  test_simple_endpoint.py  test_stock_data_endpoint.py
tests/fixtures/: __init__.py  data_ingestion_fixtures.py  test_helpers.py
tests/integration/: airflow_test_helpers.py  test_airflow_connection_pool.py  test_airflow_dag_execution.py  test_airflow_integration.py  test_airflow_postgres_hanging.py  test_airflow_postgres_integration.py  test_airflow_postgres_resources.py  test_airflow_task_context.py  test_api_integration.py  test_dag_execution_integration.py  test_dag_helper_hanging.py  test_data_pipeline.py  test_db_integration.py  test_direct_fact_loading.py  test_direct_fact_loading_integration.py  test_end_to_end_pipeline.py  test_endpoint_integration.py  test_install_integration.py  test_stock_data_endpoint_integration.py
tests/quality/: quality_check.py  run_mypy.py
tests/unit/: test_api_client.py  test_config.py  test_core.py  test_direct_fact_loading.py
(+55 files in other folders)
